# linden

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  python-test-pr.yml
.versifyr/: configuration.yaml
doc/: example_usage.py
provider/: ollama.py  openai.py
src/core/: agent_runner.py  ai_client.py
src/linden/: __init__.py
src/linden/config/: __init__.py  configuration.py
src/linden/core/: __init__.py  agent_runner.py  ai_client.py  model.py
src/linden/memory/: agent_memory.py
src/linden/provider/: __init__.py  ai_client.py  anthropic.py  google.py  groq.py  helpers.py  ollama.py  openai.py
src/linden/utils/: doc_string_parser.py
src/memory/: agent_memory.py
src/provider/: groq.py
test/config/: conftest.py  test_configuration.py  test_edge_cases.py  test_imports.py
test/core/: __init__.py  config.toml  conftest.py  test_agent_configuration.py  test_agent_runner.py  test_ai_client.py  test_edge_cases.py  test_imports.py  test_integration.py  test_model.py
test/memory/: __init__.py  conftest.py  test_agent_memory.py  test_imports.py  test_memory_manager.py
test/provider/: __init__.py  conftest.py  test_anthropic_client.py  test_edge_cases.py  test_groq_client.py  test_imports.py  test_integration.py  test_ollama_client.py  test_openai_client.py
test/utils/: __init__.py  conftest.py  test_doc_string_parser.py  test_edge_cases.py  test_imports.py
