[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "chisel"
version = "1.0.0"
authors = [{ name = "Matteo Stabile", email = "matteo.stabile2@gmail.com" }]
description = "Una breve descrizione di cosa fa il pacchetto Chisel."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
"Homepage" = "https://github.com/matstech/chisel"
"Bug Tracker" = "https://github.com/matstech/chisel/issues"
