[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "linden"
version = "1.0.0"
authors = [{ name = "Matteo Stabile", email = "matteo.stabile2@gmail.com" }]
description = "A Python framework for building AI agents with multi-provider LLM support, persistent memory, and function calling capabilities."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
"Homepage" = "https://github.com/matstech/linden"
"Bug Tracker" = "https://github.com/matstech/linden/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
